manifests/networkpolicies/postgresql-ingress-from-devops-control-plane.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgresql-ingress-from-devops-control-plane
  namespace: devops-control-plane
spec:
  podSelector:
    matchLabels:
      app: postgresql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: devops-control-plane
      ports:
        - protocol: TCP
          port: 5432
